--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@elizaos/plugin-agentkit",
+    "name": "@elizaos-plugins/plugin-agentkit",
     "version": "0.25.6-alpha.1",
     "main": "dist/index.js",
     "type": "module",
