--- a/package.json
+++ b/package.json
@@ -27,5 +27,28 @@
     },
     "publishConfig": {
         "access": "public"
+    },
+    "agentConfig": {
+        "pluginType": "elizaos:client:1.0.0",
+        "pluginParameters": {
+            "CDP_API_KEY_NAME": {
+                "type": "string",
+                "minLength": 1,
+                "description": "your_key_name",
+                "optional": false
+            },
+            "CDP_API_KEY_PRIVATE_KEY": {
+                "type": "string",
+                "minLength": 1,
+                "description": "your_private_key",
+                "optional": false
+            },
+            "CDP_AGENT_KIT_NETWORK": {
+                "type": "string",
+                "minLength": 1,
+                "description": "Optional: Defaults to base-sepolia",
+                "optional": true
+            }
+        }
     }
 }
